--- a/package.json
+++ b/package.json
@@ -12,10 +12,11 @@
   },
   "dependencies": {
     "component-files-helper": "^1.0.1",
-    "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.21.1"
+    "react-router-dom": "^6.10.0",
+    "prop-types": "^15.8.1",
+    "victory": "^36.6.8"
   },
   "devDependencies": {
     "@types/react": "^18.2.43",
